Fix a few obvious oversights

--- a/proto-ks.cfg
+++ b/proto-ks.cfg
@@ -155,7 +155,7 @@ cat <<EOF > /etc/skel/.xinitrc
 BINOC_UID=\$(id -u)
 export XCURSOR_SIZE=24
 
-if [["\$BINOC_UID" == "0"]];then 
+if [["\$BINOC_UID" == "0"]]; then 
   BINOC_XSESSION=openbox-session
 fi
 
@@ -250,16 +250,13 @@ cp /etc/skel/.gtkrc-2.0 /root/.gtkrc-2.0
 cp -r /etc/skel/.config /root
 
 # Make sure directories exist.
-mkdir -p /etc/polkit-1/rules.d \
-         /etc/sysctl.d \
+mkdir -p /etc/sysctl.d \
          /etc/systemd/system/getty@tty1.service.d \
          /etc/systemd/user/pipewire-pulse.socket.d \
          /etc/systemd/user/pipewire-pulse.service.d
 
-# This should shut the hell up because no1curr .. ever.
+# This should shut the hell up about largely irrelevant warnings because no1curr .. ever.
 echo "kernel.printk = 3 3 3 3" > /etc/sysctl.d/00-printk-calmdown.conf
-
-systemctl set-default multi-user.target
 
 # Sound is for everyone, including root.
 cat <<EOF > /etc/systemd/user/pipewire-pulse.service.d/00-condition-everyone.conf
