Expand the package selection for a more complete base

--- a/proto-ks.cfg
+++ b/proto-ks.cfg
@@ -55,7 +55,7 @@ curl
 
 # -----------------------------------------------------------------------------
 
-# GUIbase
+# Basic Desktop++
 %packages
 @base-x
 @dial-up
@@ -65,7 +65,9 @@ curl
 @networkmanager-submodules
 @guest-desktop-agents
 @legacy-fonts
+xorg-x11-drv-libinput
 artwiz-*-fonts
+bitmap-*-fonts
 dejavu-fonts-all
 redhat-*-fonts
 breeze-gtk
@@ -93,7 +95,6 @@ audacity
 firefox
 filezilla
 hexchat
-mtpaint
 blivet-gui
 dnfdragora
 gparted
@@ -101,13 +102,17 @@ mediawriter
 rdesktop
 tigervnc
 firewall-config
+kdiff3
 -abrt*
 -zsh
 -bash-completion
+-PackageKit-command-not-found
 %end
 
-# KDE Minimal
+# K Plasma Workspace for X11 (Reduced Subset)
 %packages
+@kde-apps
+qt5-qtbase-gui
 plasma-desktop
 plasma-workspace
 *-kde-theme
@@ -116,6 +121,15 @@ kinfocenter
 kscreen
 kscreenlocker
 kwin
+kde-print-manager
+kfind
+khotkeys
+kmenuedit
+kmousetool
+ksshaskpass
+kcharselect
+kwalletmanager5
+kde-settings-pulseaudio
 plasma-breeze
 plasma-discover
 plasma-systemmonitor
@@ -136,11 +150,15 @@ dolphin
 falkon
 konsole5
 kwrite
+spectacle
 kde-partitionmanager
 kio-admin
 kio-ftps
 kio-fuse
 kio-gopher
+colord-kde
+kolourpaint
+xwaylandvideobridge
 -ssdm-*
 %end
 
