--- a/proto-ks.cfg
+++ b/proto-ks.cfg
@@ -50,6 +50,7 @@ tree
 whois
 git
 curl
+wimlib*
 -plymouth*
 %end
 
@@ -67,7 +68,6 @@ curl
 @legacy-fonts
 xorg-x11-drv-libinput
 artwiz-*-fonts
-bitmap-*-fonts
 dejavu-fonts-all
 redhat-*-fonts
 breeze-gtk
@@ -78,6 +78,7 @@ paper-icon-theme
 mate-icon-theme
 tango-icon-theme
 adwaita-cursor-theme
+bluecurve-cursor-theme
 xrandr
 xset
 hsetroot
@@ -91,6 +92,7 @@ openbox
 obconf-qt
 xterm
 xfe
+firewall-config
 audacity
 firefox
 filezilla
@@ -101,7 +103,6 @@ gparted
 mediawriter
 rdesktop
 tigervnc
-firewall-config
 kdiff3
 -abrt*
 -zsh
@@ -155,7 +156,6 @@ kde-partitionmanager
 kio-admin
 kio-ftps
 kio-fuse
-kio-gopher
 colord-kde
 kolourpaint
 xwaylandvideobridge
@@ -166,6 +166,7 @@ xwaylandvideobridge
 
 # ===| Post-Setup |============================================================
 
+%post
 echo -n "Configuring skel defaults "
 # Make startx useful
 cat <<EOF > /etc/skel/.xinitrc
