--- a/proto-ks.cfg
+++ b/proto-ks.cfg
@@ -56,7 +56,7 @@ wimlib*
 
 # -----------------------------------------------------------------------------
 
-# Basic Desktop++
+# Graphical Environment
 %packages
 @base-x
 @dial-up
@@ -67,32 +67,41 @@ wimlib*
 @guest-desktop-agents
 @legacy-fonts
 xorg-x11-drv-libinput
-artwiz-*-fonts
 dejavu-fonts-all
 redhat-*-fonts
-breeze-gtk
 adwaita-icon-theme
+adwaita-cursor-theme
+breeze-cursor-theme
 breeze-icon-theme
+breeze-gtk
+%end
+
+# -----------------------------------------------------------------------------
+
+# Basic Desktop++
+%packages
+lightdm
+lightdm-settings
+lightdm-gtk-greeter-settings
+artwiz-*-fonts
 oxygen-icon-theme
 paper-icon-theme
 mate-icon-theme
 tango-icon-theme
-adwaita-cursor-theme
 bluecurve-cursor-theme
-xrandr
-xset
-hsetroot
-feh
-xterm
-arandr
-lightdm
-lightdm-settings
-lightdm-gtk-greeter-settings
 openbox
 obconf-qt
+hsetroot
 xterm
-xfe
-firewall-config
+arandr
+xrandr
+xset
+%end
+
+# -----------------------------------------------------------------------------
+
+# Accessories
+%packages
 audacity
 firefox
 filezilla
@@ -100,9 +109,8 @@ hexchat
 blivet-gui
 dnfdragora
 gparted
+firewall-config
 mediawriter
-rdesktop
-tigervnc
 kdiff3
 -abrt*
 -zsh
@@ -110,13 +118,14 @@ kdiff3
 -PackageKit-command-not-found
 %end
 
+# -----------------------------------------------------------------------------
+
 # K Plasma Workspace for X11 (Reduced Subset)
 %packages
 @kde-apps
 qt5-qtbase-gui
 plasma-desktop
 plasma-workspace
-*-kde-theme
 kde-gtk-config
 kinfocenter
 kscreen
@@ -159,7 +168,7 @@ kio-fuse
 colord-kde
 kolourpaint
 xwaylandvideobridge
--ssdm-*
+-sddm-*
 %end
 
 # =============================================================================
@@ -246,10 +255,14 @@ cat <<EOF >> /etc/skel/.bashrc
 alias rm='rm -i'
 alias cp='cp -i'
 alias mv='mv -i'
+alias ln='ln -pv'
+alias mkdir='mkdir -pv'
+alias chmod='chmod -v'
+alias chown='chown -v'
+alias untar="tar -vxf"
+
 alias dir='LC_COLLATE=C ls -halF --group-directories-first'
-alias top='htop -d 10'
 alias cls="clear"
-alias systemd-reload='systemctl daemon-reload'
 alias edit='nano'
 
 export PS1="\n\[\033[32m\]\u@\H \[\033[35m\]\$(uname -s | tr a-z A-Z) \[\033[33m\]\\\${PWD}\[\033[36m\]\\\$(__git_ps1 2>/dev/null)\[\033[0m\]\n$ "
