el-ks: Reorganize K Plasma Workspace package sets and add Wayland support
This refactors the K Plasma Workspace package set to three sets:
a common core, the Wayland session set, and the X11 session set.
Additionally, a tiny wrapper is now made for being able to start
Plasma Wayland using the command "startwlkde".

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -93,7 +93,7 @@ kdiff3
 
 # -----------------------------------------------------------------------------
 
-# K Plasma Workspace for X11 (Reduced Subset)
+# K Plasma Workspace common subset
 %packages
 @kde-apps
 qt5-qtbase-gui
@@ -121,6 +121,7 @@ polkit-kde
 plasma-thunderbolt
 plasma-nm
 pipewire-alsa
+pipewire-jack-audio-connection-kit
 pipewire-pulseaudio
 pipewire-utils
 plasma-pa
@@ -137,9 +138,23 @@ kde-partitionmanager
 kio-admin
 colord-kde
 kolourpaint
-xwaylandvideobridge
 -sddm-*
 %end
+
+# K Plasma Workspace for Wayland
+%packages
+plasma-workspace-wayland
+kwin-wayland
+xdg-desktop-portal-kde
+xwaylandvideobridge
+%end
+
+# K Plasma Workspace for X11
+%packages
+plasma-workspace-x11
+kwin-x11
+%end
+
 
 # =============================================================================
 
@@ -147,6 +162,15 @@ xwaylandvideobridge
 
 %post
 echo -n "Configuring skel defaults "
+
+# Make a useful stub for starting plasma wayland
+mkdir -p /etc/skel/.local/bin
+cat <<EOF > /etc/skel/.local/bin/startwlkde
+#!/bin/bash
+exec dbus-run-session startplasma-wayland
+EOF
+chmod +x /etc/skel/.local/bin/startwlkde
+
 # Make startx useful
 cat <<EOF > /etc/skel/.xinitrc
 #!/bin/bash
