el-ks: Drop autologin snippet

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -216,18 +216,10 @@ cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
 
 # Make sure directories exist.
-mkdir -p /etc/sysctl.d \
-         /etc/systemd/system/getty@tty1.service.d
+mkdir -p /etc/sysctl.d
 
 # This should shut the hell up because no1curr .. ever.
 echo "kernel.printk = 3 3 3 3" > /etc/sysctl.d/00-printk-calmdown.conf
-
-cat <<EOF > /etc/systemd/system/getty@tty1.service.d/00-autologin.conf
-[Service]
-ExecStartPre=/usr/bin/sleep 1
-ExecStart=
-ExecStart=-/sbin/agetty -o '-p -f -- \\u' --nohints --noclear --autologin root %I \$TERM
-EOF
 
 systemctl set-default multi-user.target
 
