el-ks: Sync /etc/skel/.local to root user

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -214,6 +214,7 @@ echo -n "Completing system specialization "
 # Sync root with skel.. mostly.
 cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
+cp -r /etc/skel/.local /root/.local
 
 # Make sure directories exist.
 mkdir -p /etc/sysctl.d
