--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -59,9 +59,8 @@ wimlib
 
 # -----------------------------------------------------------------------------
 
-# Graphical Environment
+# Graphical Core
 %packages
-@base-x
 @fonts
 @hardware-support
 @multimedia
@@ -76,24 +75,23 @@ breeze-gtk
 
 # -----------------------------------------------------------------------------
 
-# Accessories
+# K Plasma Workspace for Wayland
 %packages
-audacity
-firefox
-filezilla
-hexchat
-gparted
-firewall-config
-kdiff3
--abrt*
--zsh
--bash-completion
--PackageKit-command-not-found
+plasma-workspace-wayland
+kwin-wayland
+xdg-desktop-portal-kde
+xwaylandvideobridge
 %end
 
-# -----------------------------------------------------------------------------
+# K Plasma Workspace for X11
+%packages
+@base-x
+plasma-workspace-x11
+kwin-x11
+khotkeys
+%end
 
-# K Plasma Workspace common subset
+# K Plasma Workspace core desktop
 %packages
 @kde-apps
 qt5-qtbase-gui
@@ -106,7 +104,6 @@ kscreenlocker
 kwin
 kde-print-manager
 kfind
-khotkeys
 kmenuedit
 kmousetool
 ksshaskpass
@@ -141,20 +138,22 @@ kolourpaint
 -sddm-*
 %end
 
-# K Plasma Workspace for Wayland
-%packages
-plasma-workspace-wayland
-kwin-wayland
-xdg-desktop-portal-kde
-xwaylandvideobridge
-%end
+# -----------------------------------------------------------------------------
 
-# K Plasma Workspace for X11
+# Accessories
 %packages
-plasma-workspace-x11
-kwin-x11
+audacity
+firefox
+filezilla
+hexchat
+gparted
+firewall-config
+kdiff3
+-abrt*
+-zsh
+-bash-completion
+-PackageKit-command-not-found
 %end
-
 
 # =============================================================================
 
