[el] Revise package selection

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -59,100 +59,118 @@ wimlib
 
 # -----------------------------------------------------------------------------
 
-# Graphical Core
+# Graphical Environment
 %packages
+@base-x
 @fonts
 @hardware-support
 @multimedia
+@admin-tools
+@print-client
+@guest-desktop-agents
+@dial-up
+@input-methods
+@print-client
 @networkmanager-submodules
 @guest-desktop-agents
 adwaita-icon-theme
 adwaita-cursor-theme
-breeze-cursor-theme
-breeze-icon-theme
-breeze-gtk
-%end
-
-# -----------------------------------------------------------------------------
-
-# K Plasma Workspace for Wayland
-%packages
-plasma-workspace-wayland
-kwin-wayland
-xdg-desktop-portal-kde
-xwaylandvideobridge
-%end
-
-# K Plasma Workspace for X11
-%packages
-@base-x
-plasma-workspace-x11
-kwin-x11
-khotkeys
-%end
-
-# K Plasma Workspace core desktop
-%packages
-@kde-apps
-qt5-qtbase-gui
-plasma-desktop
-plasma-workspace
-kde-gtk-config
-kinfocenter
-kscreen
-kscreenlocker
-kwin
-kde-print-manager
-kfind
-kmenuedit
-kmousetool
-ksshaskpass
-kcharselect
-kwalletmanager5
-kde-settings-pulseaudio
-plasma-breeze
-plasma-discover
-plasma-systemmonitor
-plasma-systemsettings
-polkit-kde
-plasma-thunderbolt
-plasma-nm
-pipewire-alsa
-pipewire-jack-audio-connection-kit
-pipewire-pulseaudio
-pipewire-utils
-plasma-pa
-wireplumber
-bluedevil
-NetworkManager
-NetworkManager-wifi
-ark
-dolphin
-konsole5
-kwrite
-spectacle
-kde-partitionmanager
-kio-admin
-colord-kde
-kolourpaint
--sddm-*
-%end
-
-# -----------------------------------------------------------------------------
-
-# Accessories
-%packages
 audacity
 firefox
 filezilla
 hexchat
 gparted
 firewall-config
+gnome-keyring-pam
+udisks2
+xorg-x11-drv-libinput
 kdiff3
 -abrt*
 -zsh
 -bash-completion
 -PackageKit-command-not-found
+%end
+
+# -----------------------------------------------------------------------------
+
+# KDE Plasma Workspace
+%packages
+@kde-apps
+@kde-media
+#sddm
+#sddm-breeze
+#sddm-kcm
+NetworkManager
+NetworkManager-wifi
+ark
+bluedevil
+breeze-cursor-theme
+breeze-gtk
+breeze-icon-theme
+colord-kde
+dolphin
+ffmpegthumbs
+kcalc
+kcharselect
+kcolorchooser
+kde-gtk-config
+kde-partitionmanager
+kde-print-manager
+kde-settings-pulseaudio
+kdegraphics-thumbnailers
+kdeplasma-addons
+kdialog
+kdnssd
+keditbookmarks
+kfind
+kgpg
+khelpcenter
+khotkeys
+kinfocenter
+kio-admin
+kmenuedit
+kmousetool
+kolourpaint
+konsole5
+kscreen
+kscreenlocker
+ksshaskpass
+kwalletmanager5
+kwin
+kwin-wayland
+kwin-x11
+kwrite
+phonon-qt5-backend-vlc
+pipewire-alsa
+pipewire-jack-audio-connection-kit
+pipewire-pulseaudio
+pipewire-utils
+plasma-breeze
+plasma-desktop
+plasma-desktop-doc
+plasma-discover
+plasma-nm
+plasma-nm-l2tp
+plasma-nm-openconnect
+plasma-nm-openswan
+plasma-nm-openvpn
+plasma-nm-pptp
+plasma-pa
+plasma-systemmonitor
+plasma-thunderbolt
+plasma-systemsettings
+plasma-thunderbolt
+plasma-workspace
+plasma-workspace-wayland
+plasma-workspace-x11
+polkit-kde
+qt5-qtbase-gui
+qt5-qtdeclarative
+spectacle
+wireplumber
+xdg-desktop-portal-kde
+xwaylandvideobridge
+-sddm-*
 %end
 
 # =============================================================================
