[el] Continued de-tobinization

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -21,7 +21,6 @@ repo --name=crb --metalink=https://mirrors.centos.org/metalink?repo=centos-crb-9
 repo --name=epel --metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-9&arch=x86_64
 repo --name=epel-next --metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-next-9&arch=x86_64
 
-
 # =============================================================================
 
 # ===| Package Selection |=====================================================
@@ -73,6 +72,10 @@ wimlib
 @print-client
 @networkmanager-submodules
 @guest-desktop-agents
+xorg-x11-drv-libinput
+gnome-keyring-pam
+udisks2
+firewall-config
 adwaita-icon-theme
 adwaita-cursor-theme
 audacity
@@ -80,15 +83,12 @@ firefox
 filezilla
 hexchat
 gparted
-firewall-config
-gnome-keyring-pam
-udisks2
-xorg-x11-drv-libinput
 kdiff3
 -abrt*
 -zsh
 -bash-completion
 -PackageKit-command-not-found
+-sddm-*
 %end
 
 # -----------------------------------------------------------------------------
@@ -170,7 +170,6 @@ spectacle
 wireplumber
 xdg-desktop-portal-kde
 xwaylandvideobridge
--sddm-*
 %end
 
 # =============================================================================
@@ -179,14 +178,19 @@ xwaylandvideobridge
 
 %post
 echo -n "Configuring skel defaults "
+# Make a stub for starting a wayland session
+mkdir -p /usr/local/bin
+cat <<EOF > /usr/local/bin/startw
+#!/bin/bash
+. ~/.winitrc
+EOF
+chmod +x /usr/local/bin/startw
 
-# Make a useful stub for starting plasma wayland
-mkdir -p /etc/skel/.local/bin
-cat <<EOF > /etc/skel/.local/bin/startwlkde
+# Make startw useful
+cat <<EOF > /etc/skel/.winitrc
 #!/bin/bash
 exec dbus-run-session startplasma-wayland
 EOF
-chmod +x /etc/skel/.local/bin/startwlkde
 
 # Make startx useful
 cat <<EOF > /etc/skel/.xinitrc
@@ -194,7 +198,7 @@ cat <<EOF > /etc/skel/.xinitrc
 exec dbus-run-session startplasma-x11
 EOF
 
-# Make bash useful..
+# Make bash more useful..
 cat <<EOF >> /etc/skel/.bashrc
 alias rm='rm -i'
 alias cp='cp -i'
@@ -211,15 +215,6 @@ alias edit='nano'
 
 export PS1="\n\[\033[32m\]\u@\H \[\033[35m\]\$(uname -s | tr a-z A-Z) \[\033[33m\]\\\${PWD}\[\033[36m\]\\\$(__git_ps1 2>/dev/null)\[\033[0m\]\n$ "
 
-if [[ "\$(tty)" == "/dev/tty1" ]]; then
-  read -t 3 -p "Starting the X Window System... " RESP
-  if [[ \$? -gt 128 ]] ; then
-      startx || break
-      logout
-  fi
-fi
-
-
 # More user stuff here
 
 EOF
@@ -229,6 +224,7 @@ echo .
 
 echo -n "Completing system specialization "
 # Sync root with skel.. mostly.
+cp /etc/skel/.xinitrc /root/.winitrc
 cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
 cp -r /etc/skel/.local /root/.local
