Fix missing package warnings that cause the installer to freak out and give up on life.

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -64,7 +64,7 @@ wimlib
 @fonts
 @hardware-support
 @multimedia
-@admin-tools
+#@admin-tools
 @print-client
 @guest-desktop-agents
 @dial-up
@@ -140,7 +140,8 @@ kwin
 kwin-wayland
 kwin-x11
 kwrite
-phonon-qt5-backend-vlc
+phonon-qt5-backend-gstreamer
+#phonon-qt5-backend-vlc
 pipewire-alsa
 pipewire-jack-audio-connection-kit
 pipewire-pulseaudio
