--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -29,7 +29,7 @@ repo --name=epel-next --metalink=https://mirrors.fedoraproject.org/metalink?repo
 %packages
 @^minimal-environment
 epel-release
-dbus-daemon
+dbus-broker
 curl
 grubby
 htop
