Revert "[el] Use dbus-broker"
We need dbus-run-session(1) and that doesn't exist in dbus-broker yet.

This reverts commit b9e4cecd5f7173292c444f59759e07c7b971c896.

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -29,7 +29,7 @@ repo --name=epel-next --metalink=https://mirrors.fedoraproject.org/metalink?repo
 %packages
 @^minimal-environment
 epel-release
-dbus-broker
+dbus-daemon
 curl
 grubby
 htop
