--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -27,7 +27,12 @@ repo --name=epel-next --metalink=https://mirrors.fedoraproject.org/metalink?repo
 
 # Console
 %packages
-@^minimal-environment
+@^custom-environment
+@standard
+@legacy-unix
+@network-tools
+@system-tools
+centos-stream-release
 epel-release
 dbus-daemon
 curl
@@ -57,6 +62,7 @@ below
 btop
 glances
 tmux
+wimlib*
 -plymouth*
 %end
 
@@ -65,10 +71,10 @@ tmux
 # Graphical Environment
 %packages
 @base-x
+@legacy-x
 @fonts
 @hardware-support
 @multimedia
-#@admin-tools
 @print-client
 @guest-desktop-agents
 @dial-up
@@ -79,15 +85,21 @@ tmux
 xorg-x11-drv-libinput
 gnome-keyring-pam
 udisks2
+setools-console
+setroubleshoot
+policycoreutils-gui
 firewall-config
 adwaita-icon-theme
 adwaita-cursor-theme
+lightdm
+lightdm-settings
 audacity
 firefox
 filezilla
 hexchat
 gparted
 kdiff3
+xterm
 -abrt*
 -zsh
 -bash-completion
@@ -232,15 +244,15 @@ echo -n "Completing system specialization "
 cp /etc/skel/.xinitrc /root/.winitrc
 cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
-cp -r /etc/skel/.local /root/.local
 
 # Make sure directories exist.
 mkdir -p /etc/sysctl.d
 
 # This should shut the hell up because no1curr .. ever.
-echo "kernel.printk = 3 3 3 3" > /etc/sysctl.d/00-printk-calmdown.conf
+echo "kernel.printk = 1 1 1 1" > /etc/sysctl.d/00-printk-calmdown.conf
 
-systemctl set-default multi-user.target
+# Ensure the correct target is set
+systemctl set-default graphical.target
 
 echo .
 %end
