[el] Add quirk scriptlet to handle installing from fedora anaconda
In the event this kickstart is used from a Fedora build of Anaconda,
the rpmdb is created in the wrong place, which leads to some goofiness
on the target system. Detect this and repair it immediately.

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -194,6 +194,17 @@ xwaylandvideobridge
 # ===| Post-Setup |============================================================
 
 %post
+echo -n "Handle quirks "
+. /etc/os-release
+
+if [ "$ID" = "centos" ] || [ "$ID" = "rhel" ]; then
+    if [ "$VERSION_ID" -lt "10" ]; then
+        if [ -d "/usr/lib/sysimage/rpm" ]; then
+            cp -a /usr/lib/sysimage/rpm/* /var/lib/rpm
+        fi
+    fi
+fi
+
 echo -n "Configuring skel defaults "
 # Make a stub for starting a wayland session
 mkdir -p /usr/local/bin
