[el] Add quirk resolution as the last step and have it cleanup the quirkyness it is handling

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -194,17 +194,6 @@ xwaylandvideobridge
 # ===| Post-Setup |============================================================
 
 %post
-echo -n "Handle quirks "
-. /etc/os-release
-
-if [ "$ID" = "centos" ] || [ "$ID" = "rhel" ]; then
-    if [ "$VERSION_ID" -lt "10" ]; then
-        if [ -d "/usr/lib/sysimage/rpm" ]; then
-            cp -a /usr/lib/sysimage/rpm/* /var/lib/rpm
-        fi
-    fi
-fi
-
 echo -n "Configuring skel defaults "
 # Make a stub for starting a wayland session
 mkdir -p /usr/local/bin
@@ -265,6 +254,15 @@ echo "kernel.printk = 1 1 1 1" > /etc/sysctl.d/00-printk-calmdown.conf
 # Ensure the correct target is set
 systemctl set-default graphical.target
 
+# Handle the case of using newer-than-el9 anaconda/dnf
+. /etc/os-release
+
+if [[ "$ID" = "centos" ]] || [[ "$ID" = "rhel" ]]; then
+  if [[ "$VERSION_ID" -lt "10" ]] && [[ -d "/usr/lib/sysimage/rpm" ]]; then
+    cp -a /usr/lib/sysimage/rpm/* /var/lib/rpm
+    rm -rf /usr/lib/sysimage
+  fi
+fi
 echo .
 %end
 
