Better sync kickstarts

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -57,7 +57,6 @@ tree
 whois
 git
 curl
-wimlib
 below
 btop
 glances
@@ -241,7 +240,7 @@ echo .
 
 echo -n "Completing system specialization "
 # Sync root with skel.. mostly.
-cp /etc/skel/.xinitrc /root/.winitrc
+cp /etc/skel/.winitrc /root/.winitrc
 cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
 
