--- a/fc-ks.cfg
+++ b/fc-ks.cfg
@@ -25,7 +25,8 @@ url --mirrorlist="https://mirrors.fedoraproject.org/mirrorlist?repo=fedora-39&ar
 
 # Console
 %packages
-@^minimal-environment
+@^custom-environment
+fedora-release
 dbus-daemon
 curl
 grubby
@@ -50,6 +51,10 @@ tree
 whois
 git
 curl
+below
+btop
+glances
+tmux
 wimlib*
 -plymouth*
 %end
@@ -63,112 +68,128 @@ wimlib*
 @fonts
 @hardware-support
 @multimedia
+@input-methods
+@admin-tools
+@printing
 @networkmanager-submodules
 @guest-desktop-agents
 @legacy-fonts
 xorg-x11-drv-libinput
 dejavu-fonts-all
 redhat-*-fonts
+artwiz-*-fonts
 adwaita-icon-theme
 adwaita-cursor-theme
-breeze-cursor-theme
-breeze-icon-theme
-breeze-gtk
-%end
-
-# -----------------------------------------------------------------------------
-
-# Basic Desktop++
-%packages
-lightdm
-lightdm-settings
-lightdm-gtk-greeter-settings
-artwiz-*-fonts
 oxygen-icon-theme
 paper-icon-theme
 mate-icon-theme
 tango-icon-theme
 bluecurve-cursor-theme
-openbox
-obconf-qt
-hsetroot
-xterm
-arandr
-xrandr
-xset
-%end
-
-# -----------------------------------------------------------------------------
-
-# Accessories
-%packages
+gnome-keyring-pam
+udisks2
+setools-console
+setroubleshoot
+policycoreutils-gui
+firewall-config
+lightdm
+lightdm-settings
 audacity
 firefox
 filezilla
 hexchat
-blivet-gui
-dnfdragora
 gparted
-firewall-config
-mediawriter
 kdiff3
+mediawriter
+xterm
 -abrt*
 -zsh
 -bash-completion
 -PackageKit-command-not-found
+-sddm-*
 %end
 
 # -----------------------------------------------------------------------------
 
-# K Plasma Workspace for X11 (Reduced Subset)
+# KDE Plasma Workspace
 %packages
 @kde-apps
-qt5-qtbase-gui
-plasma-desktop
-plasma-workspace
-kde-gtk-config
-kinfocenter
-kscreen
-kscreenlocker
-kwin
-kde-print-manager
-kfind
-khotkeys
-kmenuedit
-kmousetool
-ksshaskpass
-kcharselect
-kwalletmanager5
-kde-settings-pulseaudio
-plasma-breeze
-plasma-discover
-plasma-systemmonitor
-plasma-systemsettings
-polkit-kde
-plasma-thunderbolt
-plasma-nm
-pipewire-alsa
-pipewire-pulseaudio
-pipewire-utils
-plasma-pa
-wireplumber
-bluedevil
+@kde-media
+#sddm
+#sddm-breeze
+#sddm-kcm
 NetworkManager
 NetworkManager-wifi
 ark
+bluedevil
+breeze-cursor-theme
+breeze-gtk
+breeze-icon-theme
+colord-kde
 dolphin
-falkon
-konsole5
-kwrite
-spectacle
+ffmpegthumbs
+kcalc
+kcharselect
+kcolorchooser
+kde-gtk-config
 kde-partitionmanager
+kde-print-manager
+kde-settings-pulseaudio
+kdegraphics-thumbnailers
+kdeplasma-addons
+kdialog
+kdnssd
+keditbookmarks
+kfind
+kgpg
+khelpcenter
+khotkeys
+kinfocenter
 kio-admin
+kmenuedit
+kmousetool
+kolourpaint
+konsole5
+kscreen
+kscreenlocker
+ksshaskpass
+kwalletmanager5
+kwin
+kwin-wayland
+kwin-x11
+kwrite
+phonon-qt5-backend-vlc
+pipewire-alsa
+pipewire-jack-audio-connection-kit
+pipewire-pulseaudio
+pipewire-utils
+plasma-breeze
+plasma-desktop
+plasma-desktop-doc
+plasma-discover
+plasma-nm
+plasma-nm-l2tp
+plasma-nm-openconnect
+plasma-nm-openswan
+plasma-nm-openvpn
+plasma-nm-pptp
+plasma-pa
+plasma-systemmonitor
+plasma-thunderbolt
+plasma-systemsettings
+plasma-thunderbolt
+plasma-workspace
+plasma-workspace-wayland
+plasma-workspace-x11
+polkit-kde
+qt5-qtbase-gui
+qt5-qtdeclarative
+spectacle
+wireplumber
+xdg-desktop-portal-kde
+xwaylandvideobridge
+falkon
 kio-ftps
 kio-fuse
-colord-kde
-kolourpaint
-xwaylandvideobridge
--sddm-*
 %end
 
 # =============================================================================
@@ -177,80 +198,27 @@ xwaylandvideobridge
 
 %post
 echo -n "Configuring skel defaults "
+# Make a stub for starting a wayland session
+mkdir -p /usr/local/bin
+cat <<EOF > /usr/local/bin/startw
+#!/bin/bash
+. ~/.winitrc
+EOF
+chmod +x /usr/local/bin/startw
+
+# Make startw useful
+cat <<EOF > /etc/skel/.winitrc
+#!/bin/bash
+exec dbus-run-session startplasma-wayland
+EOF
+
 # Make startx useful
 cat <<EOF > /etc/skel/.xinitrc
 #!/bin/bash
-BINOC_UID=\$(id -u)
-export XCURSOR_SIZE=24
-
-if [["\$BINOC_UID" == "0"]]; then 
-  BINOC_XSESSION=openbox-session
-fi
-
-if [[ -z "\$BINOC_XSESSION" ]]; then
-  BINOC_XSESSION=startplasma-x11
-fi
-
-exec dbus-run-session \$BINOC_XSESSION
+exec dbus-run-session startplasma-x11
 EOF
 
-# Make sure directories exist
-mkdir -p /etc/skel/.config/{gtk-3.0,openbox}
-
-# Everyone dislikes GTK.. 
-cat <<EOF > /etc/skel/.gtkrc-2.0
-gtk-theme-name="Breeze"
-gtk-icon-theme-name="oxygen"
-gtk-font-name="DejaVu Sans 9"
-gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
-gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle="hintfull"
-gtk-xft-rgba="rgb"
-EOF
-
-# Everyone STILL dislikes GTK...
-cat <<EOF > /etc/skel/.config/gtk-3.0/settings.ini
-[Settings]
-gtk-theme-name=Breeze
-gtk-icon-theme-name=oxygen
-gtk-font-name=DejaVu Sans 9
-gtk-cursor-theme-name=Bluecurve
-gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
-gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
-EOF
-
-# Make openbox useful
-cat <<EOF > /etc/skel/.config/openbox/autostart
-#!/bin/bash
-xset s noblank && xset s off && xset -dpms && xset dpms 0 0 0 && xset dpms force off && xset dpms force on
-picom --vsync --backend glx &
-hsetroot -solid '#3b6ea5' 
-exec (/usr/lib/kde4/libexec/polkit-kde-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1) &
-
-if [[ "\$(id -u)" == "0" ]]; then
-  hsetroot -solid '#800000'
-fi
-
-(konsole5 || lxterminal || xterm) &
-EOF
-
-# Make bash useful..
+# Make bash more useful..
 cat <<EOF >> /etc/skel/.bashrc
 alias rm='rm -i'
 alias cp='cp -i'
@@ -274,21 +242,64 @@ echo .
 
 # -----------------------------------------------------------------------------
 
+# Make sure directories exist
+mkdir -p /etc/skel/.config/gtk-3.0
+
+# Everyone dislikes GTK.. 
+cat <<EOF > /etc/skel/.gtkrc-2.0
+gtk-theme-name="Breeze"
+gtk-icon-theme-name="oxygen"
+gtk-font-name="DejaVu Sans 9"
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-button-images=1
+gtk-menu-images=1
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle="hintfull"
+gtk-xft-rgba="rgb"
+EOF
+
+# Everyone STILL dislikes GTK...
+cat <<EOF > /etc/skel/.config/gtk-3.0/settings.ini
+[Settings]
+gtk-theme-name=Breeze
+gtk-icon-theme-name=oxygen
+gtk-font-name=DejaVu Sans 9
+gtk-cursor-theme-name=Bluecurve
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-button-images=1
+gtk-menu-images=1
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
+EOF
+
+# -----------------------------------------------------------------------------
+
 echo -n "Completing system specialization "
 # Sync root with skel.. mostly.
+cp /etc/skel/.gtkrc-2.0 /root/.gtkrc-2.0
+cp /etc/skel/.winitrc /root/.winitrc
 cp /etc/skel/.xinitrc /root/.xinitrc
 cp /etc/skel/.bashrc /root/.bashrc
-cp /etc/skel/.gtkrc-2.0 /root/.gtkrc-2.0
 cp -r /etc/skel/.config /root
 
 # Make sure directories exist.
 mkdir -p /etc/sysctl.d \
-         /etc/systemd/system/getty@tty1.service.d \
          /etc/systemd/user/pipewire-pulse.socket.d \
          /etc/systemd/user/pipewire-pulse.service.d
 
-# This should shut the hell up about largely irrelevant warnings because no1curr .. ever.
-echo "kernel.printk = 3 3 3 3" > /etc/sysctl.d/00-printk-calmdown.conf
+# This should shut the hell up because no1curr .. ever.
+echo "kernel.printk = 1 1 1 1" > /etc/sysctl.d/00-printk-calmdown.conf
 
 # Sound is for everyone, including root.
 cat <<EOF > /etc/systemd/user/pipewire-pulse.service.d/00-condition-everyone.conf
@@ -301,4 +312,11 @@ cp /etc/systemd/user/pipewire-pulse.service.d/00-condition-everyone.conf \
 echo .
 %end
 
+# Ensure the correct target is set
+systemctl set-default graphical.target
+echo .
+%end
+
 # =============================================================================
+
+
