--- a/fc-ks.cfg
+++ b/fc-ks.cfg
@@ -15,9 +15,9 @@ rootpw --allow-ssh 16309
 # -----------------------------------------------------------------------------
 
 # RPM Source
-repo --name="fedora" --mirrorlist=https://mirrors.fedoraproject.org/mirrorlist?repo=fedora-39&arch=x86_64
-repo --name="updates" --mirrorlist=https://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f39&arch=x86_64
-url --mirrorlist="https://mirrors.fedoraproject.org/mirrorlist?repo=fedora-39&arch=x86_64"
+url --metalink="https://mirrors.fedoraproject.org/metalink?repo=fedora-39&arch=x86_64"
+repo --name="fedora" --metalink=https://mirrors.fedoraproject.org/metalink?repo=fedora-39&arch=x86_64
+repo --name="updates" --metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-released-f39&arch=x86_64
 
 # =============================================================================
 
