Add disabled entries for testing repositories
This makes it easy to do one-off runs with updates in testing.

--- a/el-ks.cfg
+++ b/el-ks.cfg
@@ -19,7 +19,9 @@ repo --name=baseos --metalink=https://mirrors.centos.org/metalink?repo=centos-ba
 repo --name=appstream --metalink=https://mirrors.centos.org/metalink?repo=centos-appstream-9-stream&arch=x86_64&protocol=https,http
 repo --name=crb --metalink=https://mirrors.centos.org/metalink?repo=centos-crb-9-stream&arch=x86_64&protocol=https,http
 repo --name=epel --metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-9&arch=x86_64
+#repo --name=epel-testing --metalink=https://mirrors.fedoraproject.org/metalink?repo=testing-epel-9&arch=x86_64
 repo --name=epel-next --metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-next-9&arch=x86_64
+#repo --name=epel-next-testing --metalink=https://mirrors.fedoraproject.org/metalink?repo=epel-testing-next-9&arch=x86_64
 
 # =============================================================================
 
