--- a/fc-ks.cfg
+++ b/fc-ks.cfg
@@ -18,6 +18,7 @@ rootpw --allow-ssh 16309
 url --metalink="https://mirrors.fedoraproject.org/metalink?repo=fedora-39&arch=x86_64"
 repo --name="fedora" --metalink=https://mirrors.fedoraproject.org/metalink?repo=fedora-39&arch=x86_64
 repo --name="updates" --metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-released-f39&arch=x86_64
+#repo --name="updates-testing" --metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-testing-f39&arch=x86_64
 
 # =============================================================================
 
